<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.polimi.frontend.activity.SettingsActivity" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <ImageView
            android:id="@+id/account_picture"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/profile_picture_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/default_photo" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" >

                <TextView
                    android:id="@+id/nameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nameLabel" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/nameHint"
                    android:inputType="text|textCapWords" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0" >

                <TextView
                    android:id="@+id/surnameLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/surnameLabel" />

                <EditText
                    android:id="@+id/surname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/surnameHint"
                    android:inputType="text|textCapWords" />
            </TableRow>
        </TableLayout>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/pwAccountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pwAccountLabel" />

        <EditText
            android:id="@+id/pwAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pwAccountHint"
            android:inputType="text|textEmailAddress" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/gmailAccountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gmailAccountLabel" />

        <EditText
            android:id="@+id/gmailAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pwAccountHint"
            android:inputType="text|textEmailAddress" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/fbAccountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fbAccountLabel" />

        <EditText
            android:id="@+id/fbAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/fbAccountHint"
            android:inputType="text|textEmailAddress" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/bDayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bDayLabel" />

        <EditText
            android:id="@+id/bDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="false"
            android:hint="@string/bDayHint"
            android:inputType="date" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/genderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderLabel" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/genderMale" />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="@string/genderFemale" />
        </RadioGroup>
    </TableRow>

</TableLayout>