<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:compat="http://schemas.android.com/apk/res-auto"
    tools:context="com.google.identitytoolkit.demo.TabbedActivity" >

    <item
        android:id="@+id/searchRequest"
        android:icon="@drawable/ic_menu_search"
        android:title="@string/search_title"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always|collapseActionView"/>
    <item
        android:id="@+id/insertRequest"
        android:icon="@drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/insertRequest"
        app:showAsAction="always"/>
    <item
        android:id="@+id/showNotification"
        android:icon="@drawable/ic_action_cc_bcc"
        android:orderInCategory="100"
        android:title="@string/showNotification"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_preferences"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/logout"
        android:orderInCategory="100"
        android:title="@string/logout"
        app:showAsAction="never"/>

</menu>