<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="it.polimi.frontend.activity.RequestActivity" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/insert_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_title_label"
            style="@style/titleTextStyle" />

        <EditText
            android:id="@+id/insert_title_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/insert_title_edit"
            android:inputType="text|textCapWords"
            style="@style/baseTextStyle" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/insert_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_description_label"
            style="@style/titleTextStyle" />

        <EditText
            android:id="@+id/insert_description_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/insert_description_edit"
            android:inputType="text|textCapWords"
            style="@style/baseTextStyle" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/insert_tag_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_tag_label"
            style="@style/titleTextStyle" />

        <EditText
            android:id="@+id/insert_tag_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/insert_tag_edit"
            android:inputType="text|textEmailAddress"
            style="@style/baseTextStyle" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/insert_start_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_start_label"
            style="@style/titleTextStyle" />

        <EditText
            android:id="@+id/insert_start_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="false"
            android:hint="@string/insert_start_edit"
            android:inputType="date"
            style="@style/baseTextStyle" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/insert_end_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_end_label"
            style="@style/titleTextStyle" />

        <EditText
            android:id="@+id/insert_end_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="false"
            android:hint="@string/insert_end_edit"
            android:inputType="date"
            style="@style/baseTextStyle" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/insert_max_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/insert_max_label"
            style="@style/titleTextStyle" />

        <EditText
            android:id="@+id/insert_max_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/insert_max_edit"
            android:inputType="text|textCapWords"
            style="@style/baseTextStyle" />
    </TableRow>

</TableLayout>