<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.polimi.frontend.activity.SettingsActivity" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:gravity="center" >

        <ImageView
            android:id="@+id/account_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/profile_picture_desc"
            android:scaleType="fitCenter"
            android:src="@drawable/default_photo" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/nameLabel"
            style="@style/titleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nameLabel" />

        <TextView
            android:id="@+id/nameTV"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/name"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/nameHint"
            android:inputType="text|textCapWords"
            android:visibility="gone" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/surnameLabel"
            style="@style/titleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/surnameLabel" />

        <TextView
            android:id="@+id/surnameTV"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/surname"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/surnameHint"
            android:inputType="text|textCapWords"
            android:visibility="gone" />
    </TableRow>

    <TableRow
        android:id="@+id/pwRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/pwAccountLabel"
            style="@style/titleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pwAccountLabel" />

        <TextView
            android:id="@+id/pwAccountTV"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/pwAccount"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/pwAccountHint"
            android:inputType="text|textEmailAddress"
            android:visibility="gone" />
    </TableRow>

    <TableRow
        android:id="@+id/gmailRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/gmailAccountLabel"
            style="@style/titleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gmailAccountLabel" />

        <TextView
            android:id="@+id/gmailAccountTV"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/gmailAccount"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/pwAccountHint"
            android:inputType="text|textEmailAddress"
            android:visibility="gone" />
    </TableRow>

    <TableRow
        android:id="@+id/fbRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/fbAccountLabel"
            style="@style/titleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fbAccountLabel" />

        <TextView
            android:id="@+id/fbAccountTV"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/fbAccount"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:hint="@string/fbAccountHint"
            android:inputType="text|textEmailAddress"
            android:visibility="gone" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/bDayLabel"
            style="@style/titleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bDayLabel" />

        <TextView
            android:id="@+id/bDayTV"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2" />

        <EditText
            android:id="@+id/bDay"
            style="@style/baseTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:focusableInTouchMode="false"
            android:hint="@string/bDayHint"
            android:inputType="date"
            android:visibility="gone" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0" >

        <TextView
            android:id="@+id/genderLabel"
            style="@style/titleTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genderLabel" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genderMale" />

            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/genderFemale" />
        </RadioGroup>
    </TableRow>

</TableLayout>