<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RatingBar
        android:id="@+id/valutazione"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:isIndicator="false"
        android:rating="3"
        android:stepSize="1.0" />

    <TextView
        android:id="@+id/ageSexLabel"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/commentTitle" />

    <EditText
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:hint="@string/commentHint"
        android:inputType="text|textCapSentences|textAutoCorrect" />

    <Button
        android:id="@+id/send"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/sendFeedback" />

</LinearLayout>