<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:divider="?android:attr/dividerVertical"
    android:showDividers="middle" >

    <TextView
        android:id="@+id/fbNotAllowed"
        style="@style/baseTextStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/fbNotAllowed"
        android:visibility="gone" />
    
    <LinearLayout
        android:id="@+id/sendFbForm"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical" >

        <RatingBar
            android:id="@+id/valutazione"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:rating="3"
            android:stepSize="1.0" />

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/commentHint"
            android:inputType="text|textCapSentences|textAutoCorrect"
            style="@style/baseTextStyle" />

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sendFeedback" />
    </LinearLayout>

    <TextView
        android:id="@+id/empty"
        style="@style/baseTextStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center"
        android:text="@string/no_fb"
        android:visibility="gone" />
    
    <ListView
        android:id="@+id/feedbackList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" />

</LinearLayout>