<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/userSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/profileImg"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginBottom="3dp"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/iconDesc"
            android:gravity="center"
            android:maxHeight="42dp"
            android:maxWidth="42dp"
            android:scaleType="fitCenter"
            android:src="@drawable/default_photo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ownerLabel"
                style="@style/rowstyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical" />

            <TextView
                android:id="@+id/ageSexLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/baseTextStyle" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/baseTextStyle" />

    <TextView
        android:id="@+id/timeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/baseTextStyle" />

    <TextView
        android:id="@+id/descriptionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/baseTextStyle" />

    <Button
        android:id="@+id/joinReq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/join" />

    <Button
        android:id="@+id/showPartecipant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/showPartecipants" />
    
    <ListView
        android:id="@+id/partecipantsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_weight="1" />

</LinearLayout>